updated logic and index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
    
 </head>
 <body>
-
+    <h1 class="title">Interactive Real-Time Earthquake Map</h1>
+    <marquee behavior="scroll" direction="left"><h3><a class="AnchorLink" href="https://abcnews.go.com/International/wireStory/58-magnitude-quake-shakes-peru-coast-reports-damage-78434416"target="_blank">5.8-magnitude quake shakes Peru coast; no reports of damage</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="AnchorLink" href="https://www.independent.co.uk/asia/east-asia/china-earthquakes-deaths-qinghai-yunnan-b1852003.html"target="_blank">Three dead after two Chinese provinces hit by tremors</a></h3></marquee>
+    
+<h3 class="subtitle">Earthquake GeoJSON information collected from the <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php" target="_blank">USGS.gov</a> website</h3>
     <!-- The div that holds our  -->
     <div id="mapid"></div>
 
@@ -32,7 +35,7 @@
     <script type="text/javascript" src="static/js/config.js"></script>
 
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/challenge_logic.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script>
  
 </body>
 </html>
