--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         target="_blank">5.8-magnitude quake shakes Peru coast; no reports of damage</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="AnchorLink" href="https://www.independent.co.uk/asia/east-asia/china-earthquakes-deaths-qinghai-yunnan-b1852003.html"
-        target="_blank">Three dead after two Chinese provinces hit by tremors</a></h3></marquee>
+        target="_blank">Three dead after two Chinese provinces hit by tremors</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="AnchorLink" href="https://abcnews.go.com/alerts/earthquakes"
+        target="_blank">Top Breaking Earthquake Alerts</a></h3></marquee>
     
 <h3 class="subtitle">Earthquake GeoJSON information collected from the <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php" target="_blank">USGS.gov</a> website</h3>
     <!-- The div that holds our  -->
