--- a/index.html
+++ b/index.html
@@ -21,14 +21,8 @@
 <body>
     <h1 class="title">Interactive Real-Time Earthquake Map</h1>
     <marquee behavior="scroll" direction="left"><h3>
-        <a class="AnchorLink" href="https://www.nbcbayarea.com/news/local/earthquakes/preliminary-magnitude-4-2-earthquake-strikes-in-san-leandro-usgs/2581546/"
-        target="_blank">Preliminary 3.9 Magnitude Earthquake Strikes Near San Leandro: USGS</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="AnchorLink" href="https://abcnews.go.com/International/wireStory/58-magnitude-quake-shakes-peru-coast-reports-damage-78434416"
-        target="_blank">5.8-magnitude quake shakes Peru coast; no reports of damage</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="AnchorLink" href="https://www.independent.co.uk/asia/east-asia/china-earthquakes-deaths-qinghai-yunnan-b1852003.html"
-        target="_blank">Three dead after two Chinese provinces hit by tremors</a>
+        <a class="AnchorLink" href="https://www.bbc.com/news/world-latin-america-58187979"
+        target="_blank">Haiti earthquake: Death toll reaches nearly 2,000</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="AnchorLink" href="https://abcnews.go.com/alerts/earthquakes"
         target="_blank">Top Breaking Earthquake Alerts</a></h3></marquee>
