updated site for satteliteStreets view and zoom to Turkey

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="AnchorLink" href="https://abcnews.go.com/alerts/earthquakes"
         target="_blank">Top Breaking Earthquake Alerts</a></h3></marquee>
     
-<h3 class="subtitle">Earthquake GeoJSON information collected from the <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php" target="_blank">USGS.gov</a> website</h3>
+<h3 class="subtitle">Earthquake GeoJSON information collected from the <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php" target="_blank">USGS.gov</a> website.  Use the layers control in the top right of the window to toggle features.</h3>
     <!-- The div that holds our  -->
     <div id="mapid"></div>
 
