updated death toll count

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1 class="title">Interactive Real-Time Earthquake Map</h1>
     <marquee behavior="scroll" direction="left"><h3>
         <a class="AnchorLink" href="https://www.wsj.com/livecoverage/turkey-syria-earthquake"
-        target="_blank">Earthquakes in Turkey, Syria: Death Toll Nears 20,000</a>
+        target="_blank">Earthquakes in Turkey, Syria: Death Toll Passes 23,000</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="AnchorLink" href="https://abcnews.go.com/alerts/earthquakes"
         target="_blank">Top Breaking Earthquake Alerts</a></h3></marquee>
