--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
     <h1 class="title">Interactive Real-Time Earthquake Map</h1>
     <marquee behavior="scroll" direction="left"><h3>
-        <a class="AnchorLink" href="https://www.wsj.com/livecoverage/turkey-syria-earthquake"
-        target="_blank">Earthquakes in Turkey, Syria: Death Toll Passes 23,000</a>
+        <a class="AnchorLink" href="https://abcnews.go.com/WNT/video/death-toll-turkey-syria-surpassing-33000-97068593"
+        target="_blank">The death toll in Turkey and Syria surpassing 33,000</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="AnchorLink" href="https://abcnews.go.com/alerts/earthquakes"
         target="_blank">Top Breaking Earthquake Alerts</a></h3></marquee>
